[metadata]
description_file = README.md

[pycodestyle]
ignore = E501,E701,E731

[flake8]
ignore = E501,E701,E731

[mypy]

[mypy-triton._C.*]
ignore_missing_imports = true

[mypy-matplotlib.*]
ignore_missing_imports = true

[mypy-pandas.*]
ignore_missing_imports = true

[mypy-setuptools.*]
ignore_missing_imports = true
