get_property(ATIDLAS_PATH TARGET atidlas PROPERTY LOCATION)
foreach(PROG maxpy vaxpy reduction mreduction mproduct)
     add_executable(${PROG}-test ${PROG}.cpp)
     add_test(${PROG} ${PROG}-test)
     target_link_libraries(${PROG}-test atidlas ${OPENCL_LIBRARIES})
     set_target_properties(${PROG}-test PROPERTIES COMPILE_FLAGS "-Wall -Wextra")
endforeach(PROG)
