add_subdirectory(Triton)
add_subdirectory(TritonGPU)
add_subdirectory(TritonNvidiaGPU)
add_subdirectory(TritonInstrument)
add_subdirectory(Gluon)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/TritonMetalGPU")
	add_subdirectory(TritonMetalGPU)
else()
	message(STATUS "Skipping TritonMetalGPU (not present in this checkout)")
endif()
