set(_CLAPACK_SRC slasr xerbla lsame)
set(CLAPACK_SRC "")
foreach(FNAME ${_CLAPACK_SRC})
    list(APPEND CLAPACK_SRC "${CMAKE_CURRENT_SOURCE_DIR}/external/${FNAME}.c")
endforeach()
add_library(lapack-subset SHARED ${CLAPACK_SRC})
add_dependencies(lapack-subset isaac)

foreach(PROG axpy dot ger gemv gemm gesvd)
     add_executable(test-${PROG} ${PROG}.cpp)
     add_test(test-${PROG} test-${PROG})
     target_link_libraries(test-${PROG} isaac lapack-subset)
endforeach()
