if(CUDA_FOUND)
   set(BACKEND_DEFINES "-DISAAC_WITH_CUDA")
   include_directories(${CUDA_INCLUDE_DIRS})
endif()

get_property(ISAAC_PATH TARGET isaac PROPERTY LOCATION)
foreach(PROG axpy dot ger gemv gemm)
     add_executable(${PROG}-test ${PROG}.cpp)
     add_test(${PROG} ${PROG}-test)
     target_link_libraries(${PROG}-test isaac ${OPENCL_LIBRARIES})
     set_target_properties(${PROG}-test PROPERTIES COMPILE_FLAGS "${BACKEND_DEFINES} -Wall -Wextra -std=c++11")
endforeach(PROG)
